This will probably only run in the IDE at the moment.
Need to find the memory leak.

NASA Worldwind Map not working yet. Still need to make it comply with
the interface. Otherwise it is good.

Should also get the ImageMap mapper interfaced at some point, so we can
add custom maps. 

Need to incorporate terrain data from WorldWind into shape of hyperbolic
projections, to reduce error when terrain is not flat.

TileCache for OSM is working well. 

DerbyRelationalDatabase is working well in Embedded mode, but the
configuration panel still needs to be added and implemented. Need to
test against a MySql server across the network.

Haven't started with MAVLINK. Need to extract GPS info and RSSI from
data stream.
Also need to insert RSSI data into MAVLINK stream from bird.(That is
another project.)

Also need to think about doing something useful with all the data :)